--- a/BappDescription.html
+++ b/BappDescription.html
@@ -1,17 +1,18 @@
-<p>The extension helps you to find authorization bugs. Just navigate through the web application with a high privileged user and let the Auth Analyzer repeat your requests for any defined non-privileged user. CSRF Tokens of the non-privileged users will be extracted and replaced automatically and each response will be analyzed on its bypass status.</p>
+<p>The Burp extension helps you to find authorization bugs. Just navigate through the web application with a high privileged user and let the Auth Analyzer repeat your requests for any defined non-privileged user. With the possibility to define Parameters the Auth Analyzer is able to extract and replace parameter values automatically. With this for instance, CSRF tokens or even whole session characteristics can be auto extracted from responses and replaced in further requests. Each response will be analyzed and tagged on its bypass status.</p>
 
-<p>How does it work?</p>
-<ol>
-	<li>Create a &quot;New Session&quot; for each user role you want to test (e.g. admin, normal_user, unauthenticated, ...)</li>
-	<li>Paste the session characteristic (e.g. Session Cookie, Authorization Header, ...) for each role into the text area &quot;Header(s) to replace&quot;. Use the whole header for it (e.g. Cookie: session=123456;). Header(s) can be marked and send from anywhere to Auth Analyzer over the standard context menu (mark text and right click).</li>
-	<li>Optional: Define CSRF Token Name for each role</li>
-	<ul>
-      <li>With a dynamic value (the CSRF token value will be automatically grepped if it is present in a HTML-input tag or JSON object of a given response)</li>
-      <li>With a static value (value can be defined)</li>
-	    <li>Remove CSRF Token (to test CSRF check mechanism or for other purposes)</li>
-    </ul>
-	<li>Optional: Add your preferred &quot;Grep and Replace&quot; Rules (a start and stop string can be defined for Grep and Replace. Each grepped value will be replaced within the defined Replace rule of the given session).</li>
-	<li>Define Filters (only relevant requests should be processed)</li>
-	<li>Start the Auth Analyzer.</li>
-	<li>Navigate with a high privileged user through the web application and access resources / functions which should not be accessible by your defined roles (sessions). All unfiltered proxy request will be modified, repeated and analyzed (for each role) by the Auth Analyzer. The results are displayed in the Auth Analyzer Tab.</li>
-</ol>
+<p>Features</p>
+<ul>
+	<li>Session creation for each user role</li>
+	<li>Renaming and removing a Session</li>
+	<li>Clone a Session</li>
+	<li>Set parameters to replace</li>
+	<li>Define how the parameter value will be discovered (automatic, static, prompt for input)</li>
+	<li>CSRF token extraction and replacement</li>
+	<li>Remove a parameter</li>
+	<li>Detailed filter rules</li>
+	<li>Detailed status Panel for each Session</li>
+	<li>Start / Stop / Pause the Auth Analyzer</li>
+	<li>Detailed view of all processed requests and responses</li>
+	<li>Send Header(s) and / or Parameter(s) directly to Auth Analyzer by context menu</li>
+	<li>Auto save current current configuration</li>
+</ul>
