--- a/BappDescription.html
+++ b/BappDescription.html
@@ -1,29 +1,13 @@
 <p>The Burp extension helps you to find authorization bugs. Just navigate through the web application with a high privileged user and let the Auth Analyzer repeat your requests for any defined non-privileged user. With the possibility to define Parameters the Auth Analyzer is able to extract and replace parameter values automatically. With this for instance, CSRF tokens or even whole session characteristics can be auto extracted from responses and replaced in further requests. Each response will be analyzed and tagged on its bypass status.</p>
 
-<p>Features</p>
+<p>Main Features</p>
 <ul>
-    <li>Session Creation for each user role</li>
-    <li>Renaming and Removing a Session</li>
-    <li>Clone a Session</li>
-    <li>Set any amount of Headers to replace / add</li>
-    <li>Set Headers to remove</li>
-    <li>Set any amount of parameters to replace</li>
-    <li>Define how the parameter value will be discovered (automatic, static, prompt for input, from to string)</li>
-    <li>Remove a specified parameter</li>
-    <li>Detailed Filter Rules</li>
-    <li>Detailed Status Panel for each Session</li>
-    <li>Pause each Session separately</li>
-    <li>Renew Auto Extracted Parameter Value automatically</li>
-    <li>Repeat Request by context menu</li>
-    <li>Table Data Filter</li>
-    <li>Table Data Export Functionality</li>
-    <li>Start / Stop / Pause the "Auth Analyzer"</li>
-    <li>Pause each Session seperatly</li>
-    <li>Restrict session to defined scope</li>
-    <li>Filter Requests with same header(s)</li>
-    <li>Drop Original Request functionality</li>
-    <li>Detailed view of all processed Requests and Responses</li>
-    <li>Send Header(s) and / or Parameter(s) directly to Auth Analyzer by Context Menu</li>
-    <li>Auto save current configuration</li>
-    <li>Save to file and load from file current configuration</li>
+	<li>Automated Request Repeating </li>
+	<li>Automated Header and Parameter Replacement</li>
+	<li>Automated Parameter Value Extraction (e.g. Session Cookie or CSRF Token)</li>
+	<li>Automated Header and Parameter removement</li>
+	<li>Automated Bypass Analysis</li>
+	<li>Detailed Processing Filters</li>
+	<li>User Friendly Request / Response Comparison View</li>
+	<li>Save and Export Functionality</li>
 </ul>
