--- a/BappDescription.html
+++ b/BappDescription.html
@@ -1,12 +1,15 @@
 <p>The Burp extension helps you to find authorization bugs. Just navigate through the web application with a high privileged user and let the Auth Analyzer repeat your requests for any defined non-privileged user. With the possibility to define Parameters the Auth Analyzer is able to extract and replace parameter values automatically. With this for instance, CSRF tokens or even whole session characteristics can be auto extracted from responses and replaced in further requests. Each response will be analyzed and tagged on its bypass status.</p>
 
+<p>Authorization Tests can be performed in a semi automated way if you have the resources you want to test in your sitemap. In the very first step define your sessions you want to test. Then just expand your sitemap, select the resources and repeat the requests through the context menu. Additionally you can define some options which requests should be repeated and which not. With this you can perform authorization tests of a complex website within seconds.</p>
+
 <p>Main Features</p>
 <ul>
-	<li>Automated Request Repeating </li>
+	<li>Automated Request Repeating</li>
 	<li>Automated Header and Parameter Replacement</li>
 	<li>Automated Parameter Value Extraction (e.g. Session Cookie or CSRF Token)</li>
 	<li>Automated Header and Parameter removement</li>
 	<li>Automated Bypass Analysis</li>
+	<li>Bulk Request Repeating (Semi Automated Authorization Testing)</li>
 	<li>Detailed Processing Filters</li>
 	<li>User Friendly Request / Response Comparison View</li>
 	<li>Save and Export Functionality</li>
